adding code for train validaiton test split

--- a/summary_ml.ipynb
+++ b/summary_ml.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Cross-validation\n",
+    "\n",
     "Cross-validation is a model validation techniques for assessing how the results of a statistical analysis will generalize to an independent data set. \n",
     "\n",
     "Model selection: estimating the performance of different models in order to choose the best one.\n",
@@ -149,20 +151,42 @@
     "\n",
     "- the law of large number , as we increase the the number of DT and averge the result we expect to get the result, the noise will be averged out, as you increase data, then the variannce will decrease, remember if yoy have infinited data then there is no overfitting.\n",
     "\n",
-    "- Bootstrapping, is then used to generate data set out of the original data set\n",
+    "- Bootstrapping \" sample with repalcement\", is then used to generate data set out of the original data set\n",
     "\n",
+    "- Benefits : has a higher accuracy\n",
+    "             also it does not require lots of preprocessing\n",
+    "             \n",
+    "- Baggin is good wheneveer you have a problem of high variance\n",
+    "             \n",
+    "   \n",
+    "### Boosting:\n",
     "\n",
+    "- solve the porblem if you have weak learners. use train them sequentially\n",
     "\n",
+    "- very similar to the gradient descenet taking many small steps, gradietn desent in function sapce. Every step I am actually making samll progress toward the right direction\n",
+    "- iteratively train new learners to overcome the shortcoming of the previous leaners.\n",
+    "- weak learners can not overfit, and also can not learn complex problems\n",
     "\n",
+    "### PCA\n",
     "\n",
-    "\n",
-    "\n",
+    "-  When the data has a zero mean, then the the PCA will have the same projection as the SVD, othewise we have to center the data to get the same result.\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Code that you will definitely need : \n",
+    "\n",
+    "`(X_train, X_vt, y_train, y_vt) = train_test_split(X, y, test_size=0.4, random_state=0)`\n",
+    "\n",
+    "`(X_validation, X_test, y_validation, y_test) = train_test_split(X_vt, y_vt, test_size=0.5, random_state=0)`"
    ]
   },
   {
